<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Cal</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="labSelectItemPrev">prev</string>
    <string name="labSelectItemToday">Today</string>
    <string name="labSelectItemNext">next</string>
    <string name="contentDescription">ContentDescription</string>
    <string name="edtInputTitle">Input Title</string>
    <string name="cancel">Cancel</string>
    <string name="taskStartTime">Start Time</string>
    <string name="taskSubject">Subject</string>
    <!-- task info -->
    <string name="labSubject">Subject</string>
    <string name="labContent">Content</string>
    <string name="labAlarm">alarm</string>
    <string name="labStartDate">start date</string>
    <string name="labStartTime">start time</string>
    <string name="labAllDay">all day</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSave">Save</string>
    <!-- day of week -->
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu </string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <!-- alert msg -->
    <string name="msgTypeInfo">Information</string>
    <string name="msgTypeWarning">Warning</string>
    <string name="msgTypeError">Error</string>
    <string name="msgBoxButtonOk">OK</string>
    <!-- DB msg -->
    <string name="saveSuccess">Save Success !</string>
    <string name="updateSuccess">Update Success !</string>
    <string name="deleteSuccess">Delete Success !</string>
    <string name="saveFail">Save Failed !</string>
    <string name="updateFail">Update Failed !</string>
    <string name="deleteFail">Delete Failed !</string>
    
    <string name="menu_settings">Settings</string>
    <string name="add">Add</string>
    <string name="title_activity_task_info">Day Task List</string>
    <!-- validate msg -->
    <string name="subject_or_content_is_empty">Subject and Content must have a value</string>
</resources>