<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalActivity" >

    <!-- TOP VIEW CONTROL BUTTON -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/btnPrev"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/btnprev" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnNext"
            android:layout_toRightOf="@+id/btnPrev"
            android:background="#b5d000"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/textToday"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/labSelectItemToday"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnNext"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/btnnext" />
    </RelativeLayout>
    
    <LinearLayout
            android:id="@+id/ttlHeaderRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#b5d000" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
        <GridView 
                android:id="@+id/gridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:numColumns="7"
                android:gravity="center_vertical"
                android:verticalSpacing="1dp"
                android:horizontalSpacing="1dp"
                android:background="@color/calendar_background">
        </GridView>
       <LinearLayout 
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       </LinearLayout>

</LinearLayout>