<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <!-- LABEL SUBJECT -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labSubject"
            android:textSize="18sp" />
    </LinearLayout>
    
    <!-- EDIT Subject -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edTaskSubject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:nextFocusDown="@+id/btnTaskStartDate"
            android:maxLength="20"
             android:inputType="text"/>
    </LinearLayout>
    
    <!-- LABEL Content -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labContent"
            android:textSize="18sp" />
    </LinearLayout>
    

    <!-- EDIT Content -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edTaskContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="2"
            android:minLines="2"
            android:nextFocusDown="@+id/btnTaskStartDate"
            android:inputType="text"/>
    </LinearLayout>

    <!-- ALARM -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chkTaskAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:text="@string/labAlarm" />
    </LinearLayout>

    <!-- START DATE -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="4dp"
            android:text="@string/labStartDate"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTaskStartDate"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="..."
            android:textColor="#FF444466"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <!-- START TIME -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:text="@string/labStartTime"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTaskStartTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="..."
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <!-- BUTTONS DELETE/SAVE -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnTaskDelete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:focusable="true"
            android:gravity="center"
            android:nextFocusRight="@+id/btnTaskSave"
            android:src="@drawable/checkmarkdelete"
            android:text="@string/btnDelete" 
            android:visibility="gone"
            android:contentDescription="@string/contentDescription"/>

        <ImageButton
            android:id="@+id/btnTaskSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btnTaskDelete"
            android:focusable="true"
            android:gravity="center"
            android:nextFocusLeft="@+id/btnTaskDelete"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/checkmarkok"
            android:text="@string/btnSave" />
    </RelativeLayout>

</LinearLayout>